light dark mode button and submit button positioning and emoji

--- a/blog.html
+++ b/blog.html
@@ -11,8 +11,8 @@
   <header>
     <h1 class="logo"><a href="./index.html">My Blog</a></h1>
     <div class="buttons" style="float: left;">
-      <button onclick="window.location.href='index.html'" id="back" class="">Back</button>
-      <button type="button" id="ldmode-blog" class="">Light/Dark Mode</button>
+      <button onclick="window.location.href='index.html'" id="back" class="backbutton">Back</button>
+      <button type="button" id="ldmode-index" class="ldbutton">🌞</button>
     </div>
   </header>
 
