--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <header>
     <div class="buttons" style="float: left;">
       <h1 class="logo"><a href="./blog.html">My Blog</a></h1>
-      <button type="button" id="ldmode-index" class="">Light/Dark Mode</button>
+      <button type="button" id="ldmode-index" class="ldbutton">🌞</button>
     </div>
   </header>
 
