fixed toggle emoji feature

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 
 <body>
   <header>
+    <h1 class="logo"><a href="./index.html">My Blog</a></h1>
     <div class="buttons" style="float: left;">
-      <h1 class="logo"><a href="./blog.html">My Blog</a></h1>
-      <button type="button" id="ldmode-index" class="ldbutton">🌞</button>
+    <button type="button" id="ldmode-index" class="ldbutton">🌞</button>
     </div>
   </header>
 
